smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/missing-space-after-string.smithy
// Parse error at line 5, column 10 near `\n`: Unexpected shape type: stringFoo | Model
$version: "2.0"
namespace smithy.example

stringFoo
